edit method created

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Portfolio Items</h1>
 
+<%= link_to "Create a new item", new_portfolio_path %>
+
 <% @portfolio_items.each do |portfolio_item| %>
     <p><%= portfolio_item.title %></p>
     <br>
@@ -8,5 +10,7 @@
     <p><%= portfolio_item.body %></p>
     <br>
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+    <br>
+    <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
     <hr>
 <% end %>
