--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -12,5 +12,6 @@
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
     <br>
     <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+    <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: {confirm: 'Are you sure?'} %>
     <hr>
 <% end %>
