--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create a new item", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_item| %>
-    <p><%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
+    <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
     <br>
     <p><%= portfolio_item.subtitle %></p>
     <br>
