--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -13,6 +13,14 @@
       <%= f.label :body %>
       <%= f.text_field :body %>
     </div>
+    <ul>
+      <%= f.fields_for :technologies do |technology_form| %>
+          <li>
+            <%= technology_form.label :name %>
+            <%= technology_form.text_field :name %>
+          </li>
+      <% end %>
+    </ul>
     <div class="actions">
       <%= f.submit %>
     </div>
