--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#home</h1>
+<h1>Hy <%= current_user.first_name if current_user %></h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <%= @skills.inspect %>
