--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+
+<div>
+  <div><%= link_to "Home", root_path %></div>
+  <div><%= link_to "About", about_me_path %></div>
+  <div><%= link_to "Contact", contact_path %></div>
+  <div><%= link_to "portfolio", portfolios_path %></div>
+  <div><%= link_to "Blog", blogs_path %></div>
+</div>
+
 <% if current_user.is_a?(User) %>
     <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
 <% else %>
