--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -19,8 +19,6 @@
 
 <%= render "shared/nav", location: 'bottom' %>
 
-<% if session[:source] %>
-    <p>Thanks for visiting us from <%= session[:source] %></p>
-<% end %>
+<%= source_helper "blog" %>
 </body>
 </html>
