--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,8 +19,7 @@
 
 <%= yield %>
 
-<% if session[:source] %>
-    <p>Thanks for visiting us from <%= session[:source] %></p>
-<% end %>
+<%= source_helper "application" %>
+
 </body>
 </html>
