--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,16 +2,4 @@
 
 <%= link_to "Create a new item", new_portfolio_path %>
 
-<% @portfolio_items.each do |portfolio_item| %>
-    <p><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item.id) %></p>
-    <br>
-    <p><%= portfolio_item.subtitle %></p>
-    <br>
-    <p><%= portfolio_item.body %></p>
-    <br>
-    <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-    <br>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-    <%= link_to "Delete", portfolio_path(portfolio_item.id), method: :delete, data: {confirm: 'Are you sure?'} %>
-    <hr>
-<% end %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
