Updated styles for master layout file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>SoftenvityPortfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -10,16 +13,25 @@
 </head>
 
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div class="site-wrapper">
 
-<%= render "shared/nav", location: 'top' %>
+  <div class="site-wrapper-inner">
 
-<%= login_helper %>
+    <div class="cover-container">
 
-<%= yield %>
-<%= copyright_generator %>
-<%= source_helper "application" %>
+
+      <%= render "shared/application_nav", location: 'top' %>
+
+      <%= login_helper %>
+
+      <%= yield %>
+      <%= copyright_generator %>
+      <%= source_helper "application" %>
+    </div>
+
+  </div>
+
+</div>
 
 </body>
 </html>
