--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,16 @@
-<h1>Hy <%= current_user.first_name  %></h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+ <div class="inner cover">
+  <h1 class="cover-heading">Cover your page.</h1>
+  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text,
+    and add your own fullscreen background photo to make it your own.</p>
+  <p class="lead">
+    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+  </p>
+</div>
 
-<%= @skills.inspect %>
-
-<hr>
+<div class="mastfoot">
+  <div class="inner">
+    <p>Cover template for <a href="https://getbootstrap.com">Bootstrap</a>, by
+      <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  </div>
+</div>
 
