Added map for contact

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Would You like to work together?</h1>
+<hr>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Address</h3>
+    <p>PSP Area, Plot No. 1, Pocket 5, Sector 22, Rohini, Delhi, 110086</p>
+    <h3>Phone</h3>
+    <p><%= number_to_phone "8860986779" %></p>
+    <h3>Email</h3>
+    <p><a href="mailto:singhsanket143@gmail.com?subject=PortfolioContact">Email Me</a></p>
+  </div>
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3498.994713897835!2d77.06390231525867!3d28.719703982383507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d068dbf44ecd7%3A0xc4ce5551f8ac8360!2sMaharaja+Agrasen+Institute+Of+Technology!5e0!3m2!1sen!2sin!4v1527223843272" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
