--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
  <div class="inner cover">
-  <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text,
-    and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">Welcome to my online home.</h1>
+  <p class="lead">Software development should not be a secret process.It's my goal to ensure that anyone with a passion for coding can become a true programming artisan.</p>
   <p class="lead">
     <%= link_to 'About Me', about_me_path, class: 'btn btn-lg btn-secondary' %>
   </p>
