Styled edit user page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,3 +159,15 @@ body {
     width: 55rem;
   }
 }
+
+/*Custom Styles*/
+.card-block {
+  color: black;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 10px;
+  text-align: left;
+}
+.auth-link a {
+  color: white;
+}
