Added design to login and forgotpassword and signup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -169,5 +169,19 @@ body {
   text-align: left;
 }
 .auth-link a {
-  color: white;
+  color: black;
+}
+.register-text {
+  text-align: right;
+}
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
+  padding: 10px;
+}
+
+.reset-password {
+  font-size: 12px;
 }
