--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
+<div class="login">
+  <div class="card">
+    <div class="card-block">
+
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="form-group">
+    <%= f.submit "Send me reset password instructions", class: 'btn btn-warning btn-block reset-password' %>
   </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+
+      <div class="auth-link">
+        <%= render "devise/shared/links" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
