Design for blog index updated

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,22 +12,15 @@
 </head>
 
 <body>
-<div class="blog-masthead">
-  <div class="container">
-    <nav class="nav blog-nav">
-      <a class="nav-link active" href="#">Home</a>
-      <a class="nav-link" href="#">New features</a>
-      <a class="nav-link" href="#">Press</a>
-      <a class="nav-link" href="#">New hires</a>
-      <a class="nav-link" href="#">About</a>
-    </nav>
-  </div>
-</div>
+
+<%= render "shared/blog_nav", location: 'bottom' %>
 
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">The Bootstrap Blog</h1>
+    <h1 class="blog-title">The Softenvity Blog</h1>
     <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <%= link_to 'Write A New Blog', new_blog_path if logged_in?(:site_admin) %>
+
   </div>
 </div>
 
@@ -35,7 +28,7 @@
   <div class="row">
 
 
-    <%= login_helper %>
+
 
     <%= yield %>
 
@@ -71,17 +64,16 @@
       </div>
     </div>
 
-    <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-      <p>
-        <a href="#">Back to top</a>
-      </p>
-    </footer>
 
-    <%= render "shared/nav", location: 'bottom' %>
 
     <%= source_helper "blog" %>
   </div>
+  <footer class="blog-footer">
+    <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+    <p>
+      <a href="#">Back to top</a>
+    </p>
+  </footer>
 </div>
 </body>
 </html>
