--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 /*
  * Globals
  */
@@ -164,4 +165,10 @@ h6, .h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+// Custom Styles
+
+.social-links li {
+  font-size: 2.5em;
 }
