--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -6,44 +6,19 @@
   <title>SoftenvityPortfolio</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-
   <%= stylesheet_link_tag 'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-
 <body>
-
 <%= render "shared/blog_nav", location: 'bottom' %>
-
-<div class="blog-header">
-  <div class="container">
-    <h1 class="blog-title">The Softenvity Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-    <%= link_to 'Write A New Blog', new_blog_path if logged_in?(:site_admin) %>
-
-  </div>
-</div>
-
+<%= render "shared/blog_masthead" %>
 <div class="container">
   <div class="row">
-
-
-
-
     <%= yield %>
-
     <%= render "shared/blog_sidebar" %>
-
-
-
     <%= source_helper "blog" %>
   </div>
-  <footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-    <p>
-      <a href="#">Back to top</a>
-    </p>
-  </footer>
+  <%= render "shared/blog_footer" %>
 </div>
 </body>
 </html>
