--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -8,6 +8,10 @@ body {
   margin-bottom: 0;
 }
 
+.navbar-brand {
+  color: white
+}
+
 .jumbotron {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -57,4 +61,34 @@ footer {
 
 footer p {
   margin-bottom: .25rem;
+}
+
+.portfolio-header {
+  background: black;
+}
+
+
+.container1 {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
