--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "Home", root_path, class: 'nav-link' %>
       <%= link_to "About", about_me_path, class: 'nav-link' %>
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
-      <%= link_to "portfolio", portfolios_path, class: 'nav-link' %>
+      <%= link_to "Portfolio", portfolios_path, class: 'nav-link' %>
       <%= link_to "Blog", blogs_path, class: 'nav-link' %>
       <%= login_helper 'nav-link' %>
     </nav>
