--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,9 +1,23 @@
-<%= image_tag @portfolio_item.main_image %>
-<h1><%= @portfolio_item.title %></h1>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
+      <hr>
+      <em><%= @portfolio_item.subtitle %></em>
+      <p><%= @portfolio_item.body %></p>
+      <hr>
+      <h2>Technologies used:</h2>
+      <% @portfolio_item.technologies.each do |t| %>
+          <p><%= t.name %></p>
+      <% end %>
 
-<h2>Technologies used:</h2>
-<% @portfolio_item.technologies.each do |t| %>
-    <p><%= t.name %></p>
-<% end %>
+
+
+    </div>
+  </div>
+</div>
+
+
