--- a/app/views/shared/_portfolio_footer.html.erb
+++ b/app/views/shared/_portfolio_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
+      <%= link_to 'View All Portfolio Items', portfolios_path %> /
       <a href="#">Back to top</a>
     </p>
-    <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+    <p><%= copyright_generator %></p>
   </div>
 </footer>
