--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,25 +1,38 @@
 <%= form_for(portfolio_item) do |f| %>
-    <div class="field">
-      <%= f.label :title %>
-      <%= f.text_field :title %>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :subtitle %>
+          <%= f.text_field :subtitle, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <%= f.label :body %>
+          <%= f.text_area :body, class: 'form-control', rows: '13' %>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <hr>
+        <h2>Technologies Used</h2>
+        <ul>
+          <%= f.fields_for :technologies do |technology_form| %>
+              <li>
+                <%= technology_form.label :name %>
+                <%= technology_form.text_field :name, class: 'form-control' %>
+              </li>
+          <% end %>
+        </ul>
+        <div class="form-group">
+          <%= f.submit class: 'btn btn-primary btn-block' %>
+        </div>
+      </div>
     </div>
-    <div class="field">
-      <%= f.label :subtitle %>
-      <%= f.text_field :subtitle %>
-    </div>
-    <div class="field">
-      <%= f.label :body %>
-      <%= f.text_field :body %>
-    </div>
-    <ul>
-      <%= f.fields_for :technologies do |technology_form| %>
-          <li>
-            <%= technology_form.label :name %>
-            <%= technology_form.text_field :name %>
-          </li>
-      <% end %>
-    </ul>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+
+
+
 <% end %>
