Added video background

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
 
       <div id="background"></div>
 
+      <%= video_tag('HardDrivePhotojpeg.mp4', id: 'background', autoplay: true, loop: true, muted: true, poster: 'profile.jpg') %>
+
       <%= render "shared/application_nav" %>
 
 
