Implemented initial file upload system

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -94,6 +94,6 @@ footer p {
   transform: rotate(45deg) translate(-8px, -8px);
 }
 
-.portfolio-form {
-  padding: 20px;
+.portfolio-container{
+  padding-top: 30px;
 }
